# CycleGAN

./: .gitignore  README.md  pyproject.toml
configs/: cg.yaml  cg_fit.yaml  cg_predict.yaml
data/: monet2photo  monet2photo.py
docs/: environment.yml  learning.md  requirements.txt  tasks.md
models/: Discriminator.py
src/cg/: CycleGAN.py  main.py
src/cg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cg/callbacks/: saver.py  video_writer.py
src/cg/data/: monet2photo.py
src/cg/models/: Generator.py
src/cg/utils/: vidinfo.py
src/utils/: cfg.py
